collectd (5.4.1-2) UNRELEASED; urgency=medium

  * debian/rules:
    - Disable varnish for now; it does not work with varnish 4;
      c.f. https://bugs.debian.org/745902 (Closes: #745894).
    - Added INSTALL_BASE= to perl options; else, modules are installed
      into $HOME.
  * debian/control:
    - Drop build dependency on libvarnishapi-dev.
  * debian/patches:
    - Added collection.cgi.dpatch fixing apache data-sources; thanks to
      Fabiano Pires for reporting this and providing a patch
      (Closes: #743881).

 -- Sebastian Harl <tokkee@debian.org>  Sat, 26 Apr 2014 15:29:43 +0200

collectd (5.4.1-1) unstable; urgency=medium

  * New upstream release:
    - Fixed a segfault when using <Match> without an Instance; thanks to
      Alexander Golovko for reporting this (Closes: #732701).
    - Fixed gcrypt initialization issues (partly fixed in 5.1.1 already);
      thanks to Pieter Lexis for reporting this (Closes: #735173).
  * debian/patches:
    - Removed amqp_0_4.dpatch; merged upstream.
  * debian/control:
    - Updated standards-version to 3.9.5; no changes.
  * debian/rules:
    - Use -Wno-error=deprecated-declarations to suppress libdbi deprecation
      warnings for now; they would else cause build failures due to -Werror.

 -- Sebastian Harl <tokkee@debian.org>  Tue, 28 Jan 2014 21:47:00 +0100

collectd (5.4.0-3) unstable; urgency=low

  * debian/control:
    - Removed build-dep on iproute-dev which is about to be removed and has
      been superseded by libmnl-dev in collectd. Thanks to Laurent Bigonville
      and Andreas Henriksson for reporting this (Closes: #726921).
  * debian/collectd.conf:
    - Removed sample configuration for the write_mongodb plugin; the plugin is
      not available on Debian; thanks to Bryan Fullerton for reporting this
      (cf. LP:#1206813, Closes: #724699).
  * debian/patches:
    - Added amqp_0_4.dpatch: Added support for rabbitmq-c 0.4.x.

 -- Sebastian Harl <tokkee@debian.org>  Sat, 23 Nov 2013 16:08:05 +0100
